fix: fix double scroll bars

--- a/src/app/components/sections/services/services.scss
+++ b/src/app/components/sections/services/services.scss
@@ -23,7 +23,6 @@
         flex-shrink: 0;
         background: var(--card-background);
         border-radius: 0 133px 133px 0;
-        border: 1px solid var(--card-background);
 
         .image-main {
           overflow: hidden;
